fixed headding and about us spacing issues when moving to phone screen

--- a/pages/dbstyles.css
+++ b/pages/dbstyles.css
@@ -556,7 +556,7 @@ header section {width: 100%;}
 	height: 15px;
 	padding-left: 0px;
 } 
-nav {width: 90%;}
+nav {width: 40%;}
 h1 {font-size: 24pt;}
 h2 {font-size: 16pt;}
 h3 {font-size: 14pt;}
